Adding JWT authentication

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
     </table>
     <% } %>
     <% if (locals.id) { %>
-      <a href="/">Back to Home</a>     
+      <a href="/home">Back to Home</a>     
     <% } %>
   </body>
 </html>
